mypkg/objects/Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Destination_Object_Field__c</fullName>
        <label>Destination Object Field</label>
        <metadataRelationshipControllingField>Mapping__mdt.Destination_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Mappings1</relationshipLabel>
        <relationshipName>Mappings1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <label>Destination Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Mappings1</relationshipLabel>
        <relationshipName>Mappings1</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Object_Field__c</fullName>
        <label>Source Object Field</label>
        <metadataRelationshipControllingField>Mapping__mdt.Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Mapping</label>
    <pluralLabel>Mappings</pluralLabel>
</CustomObject>